--- a/pom.xml
+++ b/pom.xml
@@ -15,10 +15,28 @@
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-	
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<!-- API Gateway -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-gateway</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+
+		<!-- Load Balancing -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-loadbalancer</artifactId>
+			<version>4.1.2</version>
+		</dependency>
+
+		<!-- Security -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
