--- a/procfile
+++ b/procfile
@@ -1,2 +1,1 @@
-web1: java -Dserver.port=$PORT -jar target/demo-0.0.1-SNAPSHOT.jar
-web2: java -Dserver.port=$PORT -jar target/demo-0.0.1-SNAPSHOT.jar
+web: java -Dserver.port=$PORT $JAVA_OPTS -jar target/demo-0.0.1-SNAPSHOT.jar
