--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.2</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<version>3.3.0</version> <!-- Supported by Spring Cloud 2023.0.x -->
+		<relativePath />
 	</parent>
 	<groupId>com.cloud</groupId>
 	<artifactId>demo</artifactId>
