--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,9 @@ spring.cloud.loadbalancer.enabled=true
 spring.cloud.discovery.client.simple.instances.appointments-service[0].uri=${APPOINTMENTS_SERVER_1:http://localhost:8081}
 spring.cloud.discovery.client.simple.instances.appointments-service[1].uri=${APPOINTMENTS_SERVER_2:http://localhost:8082}
 
-# Security configuration
-spring.security.oauth2.resourceserver.jwt.issuer-uri=${JWT_ISSUER_URI}
+# Disable security
+spring.security.basic.enabled=false
+management.endpoints.web.exposure.include=*
 
 
 # PostgreSQL Configuration
