--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,10 @@
 		<java.version>17</java.version>
 	</properties>
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-config</artifactId>
+		</dependency>
 		<!-- API Gateway -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
