--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.4</version> <!-- Supported by Spring Cloud 2023.0.x -->
+		<!-- Match Spring Boot with Spring Cloud 2022.0.x -->
+		<version>3.1.4</version>
 		<relativePath />
 	</parent>
 	<groupId>com.cloud</groupId>
@@ -16,6 +17,8 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<!-- Use Spring Cloud 2022.0.4 for Spring Boot 3.1.x -->
+		<spring-cloud.version>2022.0.4</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<!-- Spring Cloud LoadBalancer -->
@@ -57,25 +60,27 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
+		<!-- PostgreSQL Driver -->
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
 	</dependencies>
-	<!-- Add Spring Cloud dependency management -->
+
+	<!-- Spring Cloud BOM for Spring Boot 3.1.x -->
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>2023.0.0</version>
+				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
+
 	<build>
 		<plugins>
 			<plugin>
