--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,4 +17,7 @@ spring.main.web-application-type=reactive
 
 # application.properties
 spring.main.allow-bean-definition-overriding=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
 
