--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,8 @@ spring.main.web-application-type=reactive
 spring.main.allow-bean-definition-overriding=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.autoconfigure.exclude=\
+  org.springframework.boot.autoconfigure.security.servlet.UserDetailsServiceAutoConfiguration
+
 
 
