--- a/pom.xml
+++ b/pom.xml
@@ -3,77 +3,52 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<!-- Match Spring Boot with Spring Cloud 2022.0.x -->
-		<version>3.1.4</version>
+		<version>3.1.4</version> <!-- Spring Boot 3.1.x -->
 		<relativePath />
 	</parent>
+
 	<groupId>com.cloud</groupId>
 	<artifactId>demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>demo</name>
 	<description>Demo project for Spring Boot</description>
+
 	<properties>
 		<java.version>17</java.version>
-		<!-- Use Spring Cloud 2022.0.4 for Spring Boot 3.1.x -->
+		<!-- Matches Spring Cloud 2022.0.x for Spring Boot 3.1.x -->
 		<spring-cloud.version>2022.0.4</spring-cloud.version>
 	</properties>
+
 	<dependencies>
-		<!-- Spring Cloud LoadBalancer -->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-loadbalancer</artifactId>
-		</dependency>
-
-		<!-- Spring HATEOAS -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-hateoas</artifactId>
-		</dependency>
-
-		<!-- Jakarta Validation -->
-		<dependency>
-			<groupId>jakarta.validation</groupId>
-			<artifactId>jakarta.validation-api</artifactId>
-		</dependency>
-
-		<!-- Reactor Core -->
-		<dependency>
-			<groupId>io.projectreactor</groupId>
-			<artifactId>reactor-core</artifactId>
-		</dependency>
-
-		<!-- Spring Cloud Gateway -->
+		<!-- 
+      1) Spring Cloud Gateway (requires Reactive/WebFlux)
+         The presence of this means we CANNOT use spring-boot-starter-web (MVC).
+    -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-gateway</artifactId>
 		</dependency>
 
+		<!-- 
+      2) WebFlux Instead of MVC
+         Provides the reactive web stack (RouterFunction, @RestController with Mono/Flux, etc.)
+    -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
 		</dependency>
 
-		<!-- PostgreSQL Driver -->
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.26</version> <!-- or your preferred version -->
-			<scope>provided</scope>
-		</dependency>
-		<!-- Spring Boot Web (and Security) -->
+		<!-- 3) Spring Security (for JWT auth) -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		<!-- JWT (JJWT) -->
+
+		<!-- 4) JWT (jjwt) -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
@@ -92,11 +67,58 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- 5) JPA for Data (blocking). If you want truly non-blocking DB, switch to R2DBC. -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<!-- Postgres driver (runtime scope) -->
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<!-- Spring HATEOAS (still works in WebFlux for generating links) -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+		</dependency>
+
+		<!-- Spring Cloud LoadBalancer (optional, as in your original POM) -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-loadbalancer</artifactId>
+		</dependency>
+
+		<!-- Reactor Core (already included by WebFlux, but you can keep if you need a direct
+		version) -->
+		<dependency>
+			<groupId>io.projectreactor</groupId>
+			<artifactId>reactor-core</artifactId>
+		</dependency>
+
+		<!-- Jakarta Validation (used for @Valid) -->
+		<dependency>
+			<groupId>jakarta.validation</groupId>
+			<artifactId>jakarta.validation-api</artifactId>
+		</dependency>
+
+		<!-- Lombok (annotation processor) -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.26</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
-	<!-- Spring Cloud BOM for Spring Boot 3.1.x -->
 	<dependencyManagement>
 		<dependencies>
+			<!-- 
+        Spring Cloud BOM aligned with Spring Boot 3.1.x, version 2022.0.x
+      -->
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
