--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,13 @@
 			<scope>provided</scope>
 		</dependency>
 
-	</dependencies>
+	
+   <dependency>
+     <groupId>com.google.android</groupId>
+     <artifactId>android</artifactId>
+     <version>4.1.1.4</version>
+   </dependency>
+ </dependencies>
 
 	<dependencyManagement>
 		<dependencies>
