--- a/src/main/resources/templates/package.json
+++ b/src/main/resources/templates/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
+    "axios": "^1.7.9",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "react-calendar": "^4.3.0",
-    "axios": "^1.5.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.1.3",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
